[package]
name = "qnicorn"
version = "1.0.0"
authors = ["Ziqiao Kong", "Lukas Seidel"]
documentation = "https://github.com/qilingframework/qnicorn/wiki"
edition = "2018"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
    "build.rs"
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/qilingframework/qnicorn/"
description = "Rust bindings for the Qnicorn emulator with utility functions"
build = "build.rs"
links = "qnicorn"

[dependencies]
bitflags = "1.3"
libc = "0.2"

[build-dependencies]
build-helper = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0.22"
tar = "0.4.37"
bytes = "1.1.0"